tests/negative/gold/short-types-test.gold
tests/negative/short-types-test.toit:9:14: error: Type annotation does not resolve to class or interface: 'int'
foo x/int -> int: return x + 1
             ^~~
tests/negative/short-types-test.toit:9:7: error: Type annotation does not resolve to class or interface: 'int'
foo x/int -> int: return x + 1
      ^~~
tests/negative/short-types-test.toit:10:15: error: Type annotation does not resolve to class or interface: 'bool'
bar y/bool -> bool: return not y
              ^~~~
tests/negative/short-types-test.toit:10:7: error: Type annotation does not resolve to class or interface: 'bool'
bar y/bool -> bool: return not y
      ^~~~
tests/negative/short-types-test.toit:11:16: error: Type annotation does not resolve to class or interface: 'float'
gee z/float -> float: return -z
               ^~~~~
tests/negative/short-types-test.toit:11:7: error: Type annotation does not resolve to class or interface: 'float'
gee z/float -> float: return -z
      ^~~~~
tests/negative/short-types-test.toit:14:8: error: Type annotation does not resolve to class or interface: 'int'
  1 is int
       ^~~
tests/negative/short-types-test.toit:15:10: error: Type annotation does not resolve to class or interface: 'float'
  1.0 is float
         ^~~~~
tests/negative/short-types-test.toit:16:11: error: Type annotation does not resolve to class or interface: 'bool'
  true is bool
          ^~~~
Compilation failed
